# deep-robomaster

./: .gitignore  CMakeLists.txt  README.md  Yolov5.cpp  Yolov5.h  constants.pkl  demo.cpp  hello_onnx.cpp  output.avi  setup.py  yolov5_manager.h
best/: best.xml
include/: Yolov5.h  detect.h  load.h  yolov5_manager.h
software/: WSL2配置Ubuntu20.04+opencv3.4.9.md
src/: Yolov5.cpp  detect.cpp  load.cpp  yolov5_manager.cpp
tools/: WSL2配置Ubuntu20.04+opencv3.4.9.md  opencv.sh
